# TestGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/X11/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/ftp/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/opengl/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/pong/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/shader/: Edge.h  Geometry.h  Pixelate.cpp  Pixelate.h  StormBlink.cpp  StormBlink.h  WaveBlur.cpp  WaveBlur.h  main.cpp  typedef2.cpp  typedef2.h
SFML_LIBS/Linux/SFML-2.4.2/examples/sockets/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/sound/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/sound_capture/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/voip/: NetworkAudioStream.cpp  NetworkAudioStream.h  NetworkRecorder.cpp  NetworkRecorder.h  main.cpp  typedef3.cpp  typedef3.h  typedef4.cpp  typedef4.h
SFML_LIBS/Linux/SFML-2.4.2/examples/win32/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/examples/window/: main.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/AL/: al.cpp  alc.cpp  alext.cpp  efx-presets.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/FLAC/: callback.cpp  metadata.cpp  ordinals.cpp  stream_decoder.cpp  stream_encoder.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/freetype2/: freetype.cpp  ftautoh.cpp  ftbdf.cpp  ftcache.cpp  ftglyph.cpp  ftimage.cpp  ftincrem.cpp  ftlist.cpp  ftmm.cpp  ftmodapi.cpp  ftoutln.cpp  ftrender.cpp  ftstroke.cpp  ftsystem.cpp  fttypes.cpp  ftwinfnt.cpp  t1tables.cpp  tttables.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/freetype2/config/: ftconfig.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/jpeg/: jconfig.cpp  jmorecfg.cpp  jpeglib.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/ogg/: config_types.cpp  ogg.cpp  os_types.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/stb_image/: stb_image_write.cpp
SFML_LIBS/Linux/SFML-2.4.2/extlibs/headers/vorbis/: vorbisenc.cpp  vorbisfile.cpp
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Graphics/: PFN_LOADFUNCPOINTERS.cpp  PFN_LOADFUNCPOINTERS.h  sfogl_StrToExtMap.cpp  sfogl_StrToExtMap.h  sfogl_StrToExtMap_s.cpp  sfogl_StrToExtMap_s.h  typedef5.cpp  typedef5.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Main/: activityOnCreatePointer.cpp  activityOnCreatePointer.h  main.cpp
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Network/: typedef6.cpp  typedef6.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Network/Win32/: SocketInitializer.cpp  SocketInitializer.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/System/: DefaultErrStreamBuf.cpp  DefaultErrStreamBuf.h  typedef7.cpp  typedef7.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Window/: APIENTRY.cpp  APIENTRY.h  ContextType.cpp  ContextType.h  TransientContext.cpp  TransientContext.h  WindowImplType.cpp  WindowImplType.h  glGetStringiFuncType.cpp  glGetStringiFuncType.h  typedef8.cpp  typedef8.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Window/Unix/: AtomMap.cpp  AtomMap.h  GlxErrorHandler.cpp  GlxErrorHandler.h  JoystickList.cpp  JoystickList.h  JoystickRecord.cpp  JoystickRecord.h  sfglx_StrToExtMap.cpp  sfglx_StrToExtMap.h  sfglx_StrToExtMap_s.cpp  sfglx_StrToExtMap_s.h
SFML_LIBS/Linux/SFML-2.4.2/src/SFML/Window/Win32/: ConnectionCache.cpp  ConnectionCache.h  sfwgl_StrToExtMap.cpp  sfwgl_StrToExtMap.h  sfwgl_StrToExtMap_s.cpp  sfwgl_StrToExtMap_s.h
TestGame/: CMakeLists.txt  TestGame.cpp  TestGame.h
include/Controll/: Controller.h  PlayerController.h
include/ControllComponent/: BasicController.h  Controller.cpp  Controller.h  PlayerController.cpp  PlayerController.h  SimpleCreatureController.cpp  SimpleCreatureController.h
include/Entity/: BasicBullet.h  Brick.h  Entity.h  Player.h  SimpleEnemy.h
include/GameStates/: GameState.h  MenuState.h  PauseState.h  PlayState.h  SnakeGameState.h
include/Level/: Level.h  Test_Level.h
include/LevelRoom/: RoomLevel.h
include/PhysicComponent/: Physics.cpp  Physics.h
include/PlayLevel/: PlayedLevel.h
include/Room/: Room.h  Test_Room.h
include/Systems/: CollisionChecker.cpp  CollisionChecker.h
src/: Game.cpp  settings.cpp
src/Controll/: Controller.cpp  PlayerController.cpp
src/ControllComponent/: BasicController.cpp  Controller.cpp  PlayerController.cpp  SimpleCreatureController.cpp
src/Entity/: BasicBullet.cpp  Brick.cpp  Entity.cpp  Player.cpp  SimpleEnemy.cpp
src/GameStates/: GameState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  SnakeGameState.cpp
src/Level/: Level.cpp  Test_Level.cpp
src/LevelRoom/: RoomLevel.cpp
src/PlayLevel/: PlayedLevel.cpp
src/Room/: Room.cpp  Test_Room.cpp
src/Systems/: CollisionChecker.cpp
